--- a/CanaryLauncher.csproj
+++ b/CanaryLauncher.csproj
@@ -6,9 +6,9 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E21D451C-4724-4738-A716-DD441AD38747}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CanaryLauncher</RootNamespace>
+    <RootNamespace>ragnarotLauncher</RootNamespace>
     <ApplicationIcon>icon.ico</ApplicationIcon>
-    <AssemblyName>CanaryLauncher</AssemblyName>
+    <AssemblyName>ragnarotLauncher</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
