--- a/launcher_config.json
+++ b/launcher_config.json
@@ -23,7 +23,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 			"name": "bin"
 		}
 	],
-	"clientFolder": "",
+	"clientFolder": false,
 	"newClientUrl" : "https://github.com/ragnar-ot/ragnarotLauncher/releases/download/v1.0.0/ragnar-client-13.34.zip",
 	"clientExecutable": "ragnarLauncher.exe"
 }
