--- a/launcher_config.json
+++ b/launcher_config.json
@@ -10,7 +10,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 • executable The path to the client's executable file, represented as "bin/client.exe"
 */
 {
-	"clientVersion": "13.34",
+	"clientVersion": "Versão 13.34",
 	"launcherVersion": "1.0",
 	"replaceFolders": true,
 	"replaceFolderName": [
