--- a/launcher_config.json
+++ b/launcher_config.json
@@ -24,7 +24,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 			"name": "bin"
 		}
 	],
-	"clientFolder": "Tibia/clienteRagnar",
+	"clientFolder": "Tibia",
 	"newClientUrl" : "https://github.com/ragnar-ot/ragnarotLauncher/releases/download/v1.0.0/clienteRagnar.zip",
-	"clientExecutable": "ragnarLauncher.exe"
+	"clientExecutable": "ragnarot.exe"
 }
