--- a/launcher_config.json
+++ b/launcher_config.json
@@ -1,3 +1,4 @@
+
 {
 	"clientVersion": "Versão 13.34",
 	"launcherVersion": "1.0",
@@ -13,7 +14,7 @@
 			"name": "bin"
 		}
 	],
-	"clientFolder": "%LOCALAPPDATA%\\Tibia",
+	"clientFolder": "Tibia",
 	"newClientUrl" : "https://github.com/ragnar-ot/ragnarotLauncher/releases/download/v1.0.0/clienteRagnar.zip",
 	"clientExecutable": "ragnarot.exe"
 }
