--- a/launcher_config.json
+++ b/launcher_config.json
@@ -14,7 +14,7 @@
 			"name": "bin"
 		}
 	],
-	"clientFolder": "Tibia",
+	"clientFolder": "RagnarOT",
 	"newClientUrl" : "https://github.com/ragnar-ot/ragnarotLauncher/releases/download/v1.0.0/clienteRagnar.zip",
 	"clientExecutable": "ragnarot.exe"
 }
